# registry

./: .claudeignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.agents/skills/capability-review/: SKILL.md
.agents/skills/registry-ops/: SKILL.md
.claude/skills/capability-review/: SKILL.md
.claude/skills/registry-ops/: SKILL.md
.github/workflows/: ci.yml  publish-crate.yml
.specify/: init-options.json
.specify/memory/: constitution.md
capabilities/: README.md
crates/traverse-registry/: Cargo.toml
crates/traverse-registry/src/: lib.rs
docs/: cross-repo-context.md  decision-log.md
scripts/ci/: ai_advisory_review.py  build_index.py  capability_validation.py  publish_crate.sh  spec_alignment_check.sh
scripts/ci/tests/: test_build_index.py  test_capability_validation.py
specs/001-registry-foundation/: spec.md
specs/002-capability-validation/: spec.md
specs/003-index-release-pipeline/: spec.md
specs/004-ai-advisory-review/: spec.md
specs/005-yank-deprecation/: spec.md
specs/006-public-scope-and-identity/: spec.md
specs/007-artifact-hosting/: spec.md
specs/008-reference-capability-publication/: spec.md
specs/009-contract-metadata-in-index/: spec.md
specs/010-crate-publish-pipeline/: spec.md
specs/011-capability-registry-adoption/: spec.md
specs/012-event-registry-adoption/: spec.md
specs/013-inherited-registry-governance/: spec.md
specs/014-extraction-compatibility/: spec.md
specs/014-extraction-compatibility/legacy-ids/: 002-capability-contracts.md  (+9 more)
specs/governance/: approved-specs.json
(+6 files in other folders)
